@@ -1,11 +1,10 @@
 package com.github.zhangchunsheng.amapplace.service.impl;
 
-import com.github.zhangchunsheng.amapplace.bean.result.GeoResult;
-import com.github.zhangchunsheng.amapplace.bean.result.RegeoResult;
+import com.github.zhangchunsheng.amapplace.bean.result.InputTips;
+import com.github.zhangchunsheng.amapplace.bean.result.PoiSearchResult;
 import com.github.zhangchunsheng.amapplace.service.PlaceService;
 import me.zhangchunsheng.amap.common.constant.AmapConstants;
 import me.zhangchunsheng.amap.common.exception.AmapException;
-import me.zhangchunsheng.amap.common.service.AmapService;
 import me.zhangchunsheng.amap.common.service.impl.AmapServiceApacheHttpImpl;
 
 /**
@@ -18,14 +17,14 @@ import me.zhangchunsheng.amap.common.service.impl.AmapServiceApacheHttpImpl;
  */
 public class PlaceServiceImpl extends AmapServiceApacheHttpImpl implements PlaceService {
     @Override
-    public GeoResult geo(String address) throws AmapException {
-        String responseContent = this.get(String.format(this.getConfig().getBaseUrl() + AmapConstants.Url.GEO, address, this.getConfig().getKey()));
-        return GeoResult.fromJson(responseContent);
+    public InputTips inputTips(String city, String keywords) throws AmapException {
+        String responseContent = this.get(String.format(this.getConfig().getBaseUrl() + AmapConstants.Url.INPUTTIPS, city, keywords, this.getConfig().getKey()));
+        return InputTips.fromJson(responseContent);
     }
 
     @Override
-    public RegeoResult regeo(String location) throws AmapException {
-        String responseContent = this.get(String.format(this.getConfig().getBaseUrl() + AmapConstants.Url.REGEO, location, this.getConfig().getKey()));
-        return RegeoResult.fromJson(responseContent);
+    public PoiSearchResult placeText(String city, String keywords, String page, String offset) throws AmapException {
+        String responseContent = this.get(String.format(this.getConfig().getBaseUrl() + AmapConstants.Url.PLACE_TEXT, city, keywords, page, offset, this.getConfig().getKey()));
+        return PoiSearchResult.fromJson(responseContent);
     }
 }
